[tool.poetry]
name = "JianshuResearchTools"
version = "3.0.0"
description = "科技赋能创作星辰"
authors = ["FHU-yezi <yehaowei20060411@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
httpx = {extras = ["http2"], version = "^0.23.0"}
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.961"
yapf = "^0.32.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
PyYAML = "^6.0"
types-PyYAML = "^6.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
